# traffik

./: .coverage  .dockerignore  .gitignore  .safety-project.ini  404.html  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  TESTING_COMPLETE.md  blog-post.md  compose.yml  docker-compose.dev.yml  docker-compose.matrix.yml  docker-compose.yml  docker-test.sh  example.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test.py
.github/: CODEOWNERS  lint.yaml
.github/workflows/: code-quality.yaml  docs.yaml  enforce-pr-source.yaml  lint.yaml  publish.yaml  test.yaml
advanced/: index.html
advanced/context-backends/: index.html
advanced/exemptions/: index.html
advanced/headers/: index.html
advanced/multiple-limits/: index.html
advanced/quota-context/: index.html
advanced/registry/: index.html
advanced/request-costs/: index.html
advanced/rules/: index.html
advanced/statistics/: index.html
advanced/throttled-handlers/: index.html
api-reference/: index.html
benchmarks/: __main__.py  asynctestclient.py  backends.py  base.py  benchmarks.py  bottlenecks.py  cli.py  client.py  comparison.py  headers.py  http_throttle.py  https.py  index.html  middleware.py  profile.py  rules.py  websockets.py
benchmarks/bench/: http.py  middleware.py  multiprocess.py  websocket.py
benchmarks/benchmarks/: http_bench.py  middleware_bench.py  multiprocess_bench.py  websocket_bench.py
benchmarks/output/: _json.py  table.py
benchmarks/reporters/: json_reporter.py  table.py
benchmarks/scenarios/: common.py  http.py  middleware.py  multiprocess.py  websocket.py
configuration/: index.html
core-concepts/: index.html
core-concepts/backends/: index.html
core-concepts/identifiers/: index.html
core-concepts/rates/: index.html
core-concepts/strategies/: index.html
docs/: api-reference.md  benchmarks.md  configuration.md  error-handling.md  index.md  installation.md  performance.md  quickstart.md  testing.md
docs/advanced/: context-backends.md  exemptions.md  headers.md  index.md  multiple-limits.md  quota-context.md  registry.md  request-costs.md  rules.md  statistics.md  throttled-handlers.md
docs/assets/css/: custom.css
docs/core-concepts/: backends.md  identifiers.md  index.md  rates.md  strategies.md
docs/extending/: backends.md  strategies.md
docs/includes/: abbreviations.md
docs/integration/: decorators.md  dependencies.md  direct-usage.md  index.md  middleware.md
error-handling/: index.html
examples/: a.py  b.py  c.py
extending/backends/: index.html
extending/strategies/: index.html
includes/abbreviations/: index.html
installation/: index.html
integration/: index.html
integration/decorators/: index.html
integration/dependencies/: index.html
integration/direct-usage/: index.html
integration/middleware/: index.html
performance/: index.html
quickstart/: index.html
search/: search_index.json
src/fastapi_throttle/: __init__.py  _typing.py  _utils.py  decorators.py  exceptions.py  throttles.py
src/fastapi_throttle/backends/: base.py  inmemory.py  redis.py
src/traffik/: __init__.py  _atomic_byte_ops.pyi  _locks.py  _typing.py  _utils.py  backoff.py  batch.py  config.py  decorators.py  error_handlers.py  exceptions.py  headers.py  middleware.py  quotas.py  rates.py  registry.py  throttles.py  transactions.py  types.py  typing.py  utils.py
src/traffik/backends/: __init__.py  _ext.pyi  base.py  inmemory.py  memcached.py  multiprocess.py  redis.py
src/traffik/strategies/: __init__.py  _serde.py  custom.py  fixed_window.py  leaky_bucket.py  sliding_window.py  stat_metadata.py  token_bucket.py
testing/: index.html
tests/: asyncio_client.py  asynctestclient.py  client.py  conftest.py  frameworks.py  test_client.py  test_configuration.py  test_decorators.py  test_error_handlers.py  test_headers.py  test_quota_context.py  test_quotas.py  test_rates.py  test_registry.py  test_serialization.py  test_throttles.py  test_throttles_fastapi.py  test_throttles_starlette.py  test_utils.py  utils.py
tests/backends/: __init__.py  test_base.py  test_concurrency.py  test_generic.py  test_generics.py  test_inmemory.py  test_memcached.py  test_redis.py
tests/fastapi/: test_decorators.py  test_middleware.py  test_rules.py  test_throttle_cost.py  test_throttle_decorator.py  test_throttle_dynamic_backend.py  test_throttle_headers.py  test_throttle_middleware.py  test_throttle_multi_service.py  test_throttle_stat.py  test_throttles.py  test_throttles_dynamic.py  test_throttles_multi_service.py
tests/fastapi_tests/: test_decorators.py  test_middleware.py  test_throttles.py  test_throttles_dynamic.py  test_throttles_multi_service.py
tests/integration/: test_throttle_cost.py  test_throttle_decorator.py  test_throttle_dynamic_backend.py  test_throttle_headers.py  test_throttle_middleware.py  test_throttle_multi_service.py  test_throttle_rules.py  test_throttle_stat.py  test_throttles.py
tests/integration/fastapi/: __init__.py  test_throttle_cost.py  test_throttle_decorator.py  test_throttle_dynamic_backend.py  test_throttle_headers.py  test_throttle_middleware.py  test_throttle_rules.py  (+4 more)
tests/starlette/: test_decorators.py  test_middleware.py  test_rules.py  test_throttle_cost.py  test_throttle_decorator.py  test_throttle_decorators.py  test_throttle_dynamic_backend.py  test_throttle_headers.py  test_throttle_middleware.py  test_throttle_multi_service.py  test_throttle_rules.py  test_throttle_stat.py  test_throttles.py  test_throttles_dynamic.py  test_throttles_multi_service.py
tests/starlette_tests/: test_middleware.py  test_throttles.py  test_throttles_dynamic.py  test_throttles_multi_service.py
tests/strategies/: __init__.py  test_comparison.py  test_corruption_recovery.py  test_cost.py  test_custom_strategies.py  test_edge_cases.py  test_fixed_window.py  test_leaky_bucket.py  test_sliding_window.py  test_stat.py  test_token_bucket.py
tests/unit/: test_backoff.py  test_configuration.py  test_error_handlers.py  test_headers.py  test_quotas.py  test_registry.py  test_utils.py
(+31 files in other folders)
