[project]
name = "traffik"
version = "0.1.0"
description = "A Starlette throttling library"
readme = "README.md"
authors = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
maintainers = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["starlette", "fastapi", "throttling", "rate-limiting", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
requires-python = ">=3.8"
dependencies = [
    "starlette>=0.14.0",
    "annotated-types>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/ti-oluwa/traffik"
Documentation = "https://github.com/ti-oluwa/traffik#readme"
Repository = "https://github.com/ti-oluwa/traffik.git"
"Bug Tracker" = "https://github.com/ti-oluwa/traffik/issues"
Changelog = "https://github.com/ti-oluwa/traffik/blob/main/CHANGELOG.md"

[project.optional-dependencies]
all = ["fastapi>=0.68.0", "redis>=5.0.0"]
fastapi = ["fastapi>=0.68.0"]
redis = ["redis>=5.0.0"]
test = [
    "traffik[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "anyio>=4.0.0",
    "requests>=2.32.4",
]
dev = [
    "bandit>=1.7.10",
    "mypy>=1.14.1",
    "pytest-watch>=4.2.0",
    "ruff>=0.12.1",
    "traffik[test]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
addopts = []
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "benchmark: marks tests that benchmark performance",
    "backend: tests that test a throttle backend",
    "throttle: tests that test throttling functionality",
    "db: tests that require database access",
    "redis: tests that require Redis access",
    "native: tests that use native Starlette/ASGI features, no external dependencies",
    "fastapi: tests that use FastAPI features",
    "websocket: tests that involve WebSocket functionality",
    "decorator: tests that test decorator functionality",
    "concurrent: tests that test concurrent/parallel behavior",
    "middleware: tests that test middleware functionality",
]

[tool.coverage.run]
branch = true
source = ["src/traffik"]

[tool.coverage.report]
omit = ["tests/*", "**/__init__.py", "__pycache__/*"]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py38"
lint.extend-select = ["I", "UP", "TID", "F"]
