[project]
name = "traffik"
version = "1.2.0"
description = "Rate limiting for FastAPI/Starlette applications."
readme = "README.md"
authors = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
maintainers = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
license-files = [ "LICENSE" ]
keywords = [
    "starlette", "fastapi", "throttling", "rate-limiting", "api", "multiprocess",
    "distributed-systems", "redis", "memcached", "websocket", "asyncio", "middleware",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
requires-python = ">=3.9,<3.15"
dependencies = [
    "starlette>=0.14.0",
    "annotated-types>=0.7.0",
    "msgpack>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/ti-oluwa/traffik"
Documentation = "https://ti-oluwa.github.io/traffik/"
Repository = "https://github.com/ti-oluwa/traffik.git"
"Bug Tracker" = "https://github.com/ti-oluwa/traffik/issues"
Changelog = "https://github.com/ti-oluwa/traffik/blob/main/CHANGELOG.md"

[project.optional-dependencies]
all = ["traffik[aioredis]", "traffik[coredis]", "traffik[aiomcache]", "traffik[emcache]"]

# For backwards compatibility
redis = ["traffik[aioredis]"] 
memcached = ["traffik[aiomcache]"]

# Client libraries for backends
aioredis = ["pottery>=3.0.1", "redis>=5.0.0"]
coredis = ["coredis>=6.0;  python_version >= '3.10'"]
aiomcache = ["aiomcache>=0.8.2"]
# Only install emcache on Linux and macOS since it's not compatible with Windows
emcache = ["emcache>=1.3.3; sys_platform == 'linux' or sys_platform == 'darwin'"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
traffik = { workspace = true }

[tool.pytest.ini_options]
addopts = []
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "flaky: marks tests as flaky and reruns them on failure",
    "slow: marks tests as slow",
    "benchmark: marks tests that benchmark performance",
    "backend: tests that test a throttle backend",
    "strategy: tests that test a throttling strategy",
    "throttle: tests that test throttling functionality",
    "registry: tests that test throttle registry functionality",
    "redis: Redis related tests",
    "memcached: tests that require Memcached access",
    "fastapi: tests that are specific to FastAPI",
    "websocket: tests that involve WebSocket functionality",
    "decorator: tests that test decorator functionality",
    "concurrent: tests that test concurrent/parallel behavior",
    "middleware: tests that test middleware functionality",
    "quota: tests that test `QuotaContext` functionality",
    "multithreaded: test that test multithreading functionality",
]

[tool.coverage.run]
branch = true
source = ["src/traffik"]

[tool.coverage.report]
omit = ["tests/*", "**/__init__.py", "__pycache__/*"]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py39"
lint.extend-select = ["I", "TID", "F"]


[tool.mypy]
namespace_packages = "True"
mypy_path = "src"

[dependency-groups]
dev = [
    "bandit>=1.7.10",
    "mypy>=1.14.1",
    "pytest-watch>=4.2.0",
    "ruff>=0.12.1",
    "traffik[all]",
    "psutil>=5.9.5",
    "uvicorn>=0.22.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=5.0.0",
]
test = [
    "traffik[all]",
    "fastapi>=0.68.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-rerunfailures>=16.0.1",
    "httpx2>=0.28.0",
    "anyio>=4.0.0",
    "requests>=2.32.4",
]
# Zensical only supports Python 3.10+, so we conditionally include it in the docs dependencies
docs = ["zensical>=0.0.31; python_version >= '3.10'"]
benchmark = [
    "rich>=15.0.0",
    "pymemcache>=4.0.0",
    "click>=8.1.8",
    "httpx2>=0.28.1",
    "fastapi>=0.68.0",
    "requests>=2.32.4",
]
